--- a/src/pages/Contacts/styles/Contacts.styles.css
+++ b/src/pages/Contacts/styles/Contacts.styles.css
@@ -1,27 +1,12 @@
 .contact-form {
-  padding: 1.7rem;
+  padding: 4.7rem;
   box-sizing: border-box;
   border-radius: 10px;
   background: var(--white);
 }
 .contact-form h1 {
   font-size: 1.7rem;
-}
-.contact-form form {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
-}
-.contact-form form label {
-  display: block;
-  margin-bottom: 0.5rem;
-}
-.contact-form form input {
-  width: 100%;
-  padding: 0.8rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  outline: none;
+  text-align: center;
 }
 
 .list-container {
