--- a/src/pages/Contacts/styles/Contacts.styles.scss
+++ b/src/pages/Contacts/styles/Contacts.styles.scss
@@ -9,6 +9,29 @@
   }
 }
 
+.style-form {
+  display: flex;
+  width: 20%;
+  margin-left: 270px;
+  justify-content: center;
+
+  button {
+    width: 50%;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--white);
+    background-color: var(--button);
+    margin-top: 1rem;
+    cursor: pointer;
+    &:hover {
+      background-color: var(--button-hover);
+    }
+  }
+}
+
 .list-container {
   padding: 6.7rem;
   background: var(--white);
@@ -37,5 +60,7 @@
     text-align: left;
     border-bottom: 1px solid #ddd;
   }
-  tr:hover {background-color: #f9fafaa4}
+  tr:hover {
+    background-color: #f9fafaa4;
+  }
 }
