--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -48,9 +48,13 @@ body {
     .logo-space {
       display: flex;
       align-items: center;
-      .logo-text {
+      a {
+        text-decoration: none;
+        color: var(--white);
         font-size: 1.5rem;
-        font-weight: 400;
+        font-weight: 600;
+      }
+      .logo-text {
         margin-left: 0.5rem;
       }
     }
