--- a/src/pages/Contacts/styles/Contacts.styles.scss
+++ b/src/pages/Contacts/styles/Contacts.styles.scss
@@ -1,66 +1,26 @@
-.contact-form {
-  padding: 4.7rem;
-  box-sizing: border-box;
-  border-radius: 10px;
-  background: var(--white);
-  h1 {
-    font-size: 1.7rem;
-    text-align: center;
-  }
-}
-
-.style-form {
+.contacts {
   display: flex;
-  width: 20%;
-  margin-left: 270px;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-
-  button {
-    width: 50%;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 1rem;
-    font-weight: 400;
-    color: var(--white);
-    background-color: var(--button);
-    margin-top: 1rem;
-    cursor: pointer;
-    &:hover {
-      background-color: var(--button-hover);
-    }
+  height: 100%;
+  width: 100%;
+  background-color: $color-primary;
+  color: $color-white;
+  padding: 0 1rem;
+  text-align: center;
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
   }
-}
-
-.list-container {
-  padding: 6.7rem;
-  background: var(--white);
-  h2 {
-    text-align: center;
-    font-size: 1.7rem;
+  p {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
   }
-  table {
-    width: 100%;
-    border: 1px solid black;
-    box-shadow: 5px 5px rgb(0, 0, 0);
-  }
-  th {
-    height: 50px;
-    text-align: left;
-    padding: 15px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-    background-color: #2980b9;
-    color: white;
-  }
-  td {
-    height: 50px;
-    vertical-align: bottom;
-    padding: 15px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
-  tr:hover {
-    background-color: #f9fafaa4;
+  a {
+    color: $color-white;
+    text-decoration: none;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
   }
 }
