--- a/src/pages/Registration/styles/Registration.styles.scss
+++ b/src/pages/Registration/styles/Registration.styles.scss
@@ -12,7 +12,7 @@
   padding: 1.7rem;
   box-sizing: border-box;
   border-radius: 10px;
-  background: var(--white);
+  background: $text;
   h1 {
     font-size: 1.7rem;
     text-align: center;
@@ -49,12 +49,12 @@
         border-radius: 4px;
         font-size: 1rem;
         font-weight: 600;
-        color: var(--white);
-        background-color: var(--button);
+        color: $text;
+        background-color: $button;
         margin-top: 1rem;
         cursor: pointer;
         &:hover {
-          background-color: var(--button-hover);
+          background-color: $button-hover;
         }
       }
     }
