--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,19 +7,23 @@
 
 body {
   font-family: "Inter", sans-serif;
-  color: #2c3e50;
+  color: #ecf0f1;
   background-color: #2f3640;
-  --primary-color: #2980b9;
-  --secondary-color: #192a56;
-  --white: #ecf0f1;
-  --button: #3498db;
-  --button-hover: #2980b9;
-  --border: #ccc;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: #ecf0f1;
+  cursor: pointer;
 }
 
 .header {
   background-color: #192a56;
-  color: var(--white);
+  color: #ecf0f1;
   text-align: center;
   position: fixed;
   width: 100%;
@@ -39,31 +43,122 @@ body {
   border-radius: 4px;
   font-size: 1rem;
   font-weight: 600;
-  color: var(--white);
-  background-color: var(--button);
-  cursor: pointer;
+  color: #ecf0f1;
+  background-color: #3498db;
 }
 .header .menu-header button:hover {
-  background-color: var(--button-hover);
+  background-color: #2980b9;
 }
 .header .menu-header .logo-space {
   display: flex;
   align-items: center;
 }
 .header .menu-header .logo-space a {
-  text-decoration: none;
-  color: var(--white);
   font-size: 1.5rem;
   font-weight: 600;
 }
 .header .menu-header .logo-space .logo-text {
   margin-left: 0.5rem;
 }
-
-button {
-  cursor: pointer;
+.header .menu-header .add-contact a {
+  color: #ecf0f1;
+  font-size: 2rem;
+  text-decoration: none;
+  margin-right: 0.5rem;
+}
+.header .floating-add a {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 1;
+  color: #ecf0f1;
+}
+.header .floating-add a:hover {
+  color: #bdc3c7;
 }
 
 .container {
   padding-top: 5rem;
+}
+
+.error {
+  color: red;
+  margin-bottom: 0.5rem;
+}
+
+.contacts-container {
+  padding-top: 5rem;
+  margin: 0 1rem;
+  background-color: #2f3640;
+}
+.contacts-container h1 {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.contacts-container .welcome-user {
+  font-weight: 600;
+}
+
+.signup-form-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 500px;
+  width: 100%;
+  padding: 0.3rem;
+}
+
+.signup-form {
+  padding: 1.7rem;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background: #ecf0f1;
+}
+.signup-form h1 {
+  font-size: 1.7rem;
+  text-align: center;
+}
+.signup-form h4 {
+  font-size: 1rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.signup-form .form-container {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+.signup-form .form-container .form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+.signup-form .form-container .form label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.signup-form .form-container .form input {
+  width: 100%;
+  padding: 0.8rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+}
+.signup-form .form-container .form button {
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #ecf0f1;
+  background-color: #3498db;
+  margin-top: 1rem;
+  cursor: pointer;
+}
+.signup-form .form-container .form button:hover {
+  background-color: #2980b9;
 }/*# sourceMappingURL=global.css.map */
