--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;900&display=swap');
 
+@import "global.vars";
+
 * {
   margin: 0;
   padding: 0;
@@ -8,19 +10,23 @@
 
 body {
   font-family: 'Inter', sans-serif;
-  color: #2c3e50;
-  background-color: #2f3640;
-  --primary-color: #2980b9;
-  --secondary-color: #192a56;
-  --white: #ecf0f1;
-  --button: #3498db;
-  --button-hover: #2980b9;
-  --border: #ccc;
+  color: $text;
+  background-color: $background-color;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: $text;
+  cursor: pointer;
 }
 
 .header {
-  background-color: #192a56;
-  color: var(--white);
+  background-color: $header-bg-color;
+  color: $text;
   text-align: center;
   position: fixed;
   width: 100%;
@@ -38,19 +44,16 @@ body {
       border-radius: 4px;
       font-size: 1rem;
       font-weight: 600;
-      color: var(--white);
-      background-color: var(--button);
-      cursor: pointer;
+      color: $text;
+      background-color: $button;
       &:hover {
-        background-color: var(--button-hover);
+        background-color: $button-hover;
       }
     }
     .logo-space {
       display: flex;
       align-items: center;
       a {
-        text-decoration: none;
-        color: var(--white);
         font-size: 1.5rem;
         font-weight: 600;
       }
@@ -58,13 +61,107 @@ body {
         margin-left: 0.5rem;
       }
     }
+    .add-contact a {
+      color: $text;
+      font-size: 2rem;
+      text-decoration: none;
+      margin-right: 0.5rem;
+    }
   }
-}
-
-button {
-  cursor: pointer;
+  .floating-add a {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    z-index: 1;
+    color: $text;
+    &:hover {
+      color: $text-darker;
+    }
+  }
 }
 
 .container {
   padding-top: 5rem;
+}
+
+.error {
+  color: red;
+  margin-bottom: 0.5rem;
+}
+
+.contacts-container {
+  padding-top: 5rem;
+  margin: 0 1rem;
+  background-color: $background-color;
+  h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+  }
+  .welcome-user {
+    font-weight: 600;
+  }
+}
+
+.signup-form-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 500px;
+  width: 100%;
+  padding: 0.3rem;
+}
+
+.signup-form {
+  padding: 1.7rem;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background: $text;
+  h1 {
+    font-size: 1.7rem;
+    text-align: center;
+  }
+  h4 {
+    font-size: 1rem;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  .form-container {
+    max-width: 500px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 1rem;
+    .form {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 1rem;
+      label {
+        display: block;
+        margin-bottom: 0.5rem;
+      }
+      input {
+        width: 100%;
+        padding: 0.8rem;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        outline: none;
+      }
+      button {
+        width: 100%;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 1rem;
+        font-weight: 600;
+        color: $text;
+        background-color: $button;
+        margin-top: 1rem;
+        cursor: pointer;
+        &:hover {
+          background-color: $button-hover;
+        }
+      }
+    }
+  }
 }
