feat: default styles for all forms defined

--- a/src/styles/_global.vars.scss
+++ b/src/styles/_global.vars.scss
@@ -1,9 +1,13 @@
 $primary-color: #2980b9;
-$background-color: #2f3640;
+$background-color: #cdcdcd;
 $header-bg-color: #192a56;
-$text: #ecf0f1;
-$text-darker: #bdc3c7;
+$contact-list-bg: #ecf0f1;
+$primary: #2c3e50;
+$primary-darker: #1c2732;
+$secondary: #ecf0f1;
+$divider: #f6f6f6;
 $white: #ecf0f1;
 $button: #3498db;
 $button-hover: #2980b9;
 $border: #ccc;
+$border-darker: #b1b0b0;
