feat: add contacts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -129,7 +129,7 @@ a {
   background-color: #f6f6f6;
 }
 
-/** ADD FORM **/
+/** FORM STYLES **/
 .form-container {
   position: absolute;
   top: 50%;
