--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -134,7 +134,7 @@ a {
   }
 }
 
-/** ADD FORM **/ // future default CSS for all forms!
+/** FORM STYLES **/
 
 .form-container {
   position: absolute;
