feat: contact details implemented

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -93,6 +93,10 @@ a {
   margin-bottom: 0.5rem;
 }
 
+.delete-btn {
+  background-color: $delete-btn !important;
+}
+
 /** CONTACTS LIST **/
 
 .contacts-container {
