--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,6 +89,10 @@ a {
   margin-bottom: 0.5rem;
 }
 
+.delete-btn {
+  background-color: #c0392b !important;
+}
+
 /** CONTACTS LIST **/
 .contacts-container {
   padding: 5rem 1rem;
