--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,9 +36,11 @@ a {
   align-items: center;
   padding: 1rem;
   height: 60px;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 .header .menu-header button {
-  width: 80px;
+  width: 150px;
   padding: 10px;
   border: 0;
   border-radius: 4px;
@@ -63,22 +65,6 @@ a {
   margin-left: 0.5rem;
   color: #ecf0f1;
 }
-.header .menu-header .add-contact a {
-  color: #ecf0f1;
-  font-size: 2rem;
-  text-decoration: none;
-  margin-right: 0.5rem;
-}
-.header .floating-add a {
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-  z-index: 1;
-  color: #2c3e50;
-}
-.header .floating-add a:hover {
-  color: #1c2732;
-}
 
 .container {
   padding-top: 5rem;
@@ -91,6 +77,15 @@ a {
 
 .delete-btn {
   background-color: #c0392b !important;
+}
+
+.cancel-link {
+  text-align: center;
+  text-decoration: underline;
+  margin-top: 1rem;
+}
+.cancel-link:hover {
+  text-decoration: none;
 }
 
 /** CONTACTS LIST **/
@@ -108,6 +103,16 @@ a {
 }
 .contacts-container .welcome-user {
   font-weight: 600;
+}
+.contacts-container .search-bar {
+  margin-top: 10px;
+}
+.contacts-container .search-bar input {
+  padding: 10px;
+  outline: none;
+  border-radius: 4px;
+  border: 1px solid gray;
+  width: 100%;
 }
 .contacts-container .contacts {
   background-color: #ecf0f1;
@@ -154,10 +159,6 @@ a {
 }
 .section-form h1 {
   font-size: 1.7rem;
-  text-align: center;
-}
-.section-form h4 {
-  font-size: 1rem;
   text-align: center;
   margin-bottom: 1rem;
 }
