--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -39,8 +39,10 @@ a {
     align-items: center;
     padding: 1rem;
     height: 60px;
+    max-width: 1100px;
+    margin: 0 auto;
     button {
-      width: 80px;
+      width: 150px;
       padding: 10px;
       border: 0;
       border-radius: 4px;
@@ -65,22 +67,6 @@ a {
         color: $secondary;
       }
     }
-    .add-contact a {
-      color: $secondary;
-      font-size: 2rem;
-      text-decoration: none;
-      margin-right: 0.5rem;
-    }
-  }
-  .floating-add a {
-    position: fixed;
-    bottom: 1rem;
-    right: 1rem;
-    z-index: 1;
-    color: $primary;
-    &:hover {
-      color: $primary-darker;
-    }
   }
 }
 
@@ -95,6 +81,15 @@ a {
 
 .delete-btn {
   background-color: $delete-btn !important;
+}
+
+.cancel-link {
+  text-align: center;
+  text-decoration: underline;
+  margin-top: 1rem;
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 /** CONTACTS LIST **/
@@ -112,6 +107,17 @@ a {
   }
   .welcome-user {
     font-weight: 600;
+  }
+
+  .search-bar {
+    margin-top: 10px;
+    input {
+      padding: 10px;
+      outline: none;
+      border-radius: 4px;
+      border: 1px solid gray;
+      width: 100%;
+    }
   }
   .contacts {
     background-color: $contact-list-bg;
@@ -160,12 +166,9 @@ a {
   h1 {
     font-size: 1.7rem;
     text-align: center;
-  }
-  h4 {
-    font-size: 1rem;
-    text-align: center;
     margin-bottom: 1rem;
   }
+
   .section-container {
     max-width: 500px;
     width: 100%;
